--- a/src/components/Issues/Issues.scss
+++ b/src/components/Issues/Issues.scss
@@ -1,8 +1,11 @@
 .Issues {
-  height: 100%;
   width: 100%;
+  margin-top: 15px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  justify-items: center;
-  display: flex;
+
+  &-table {
+    width: 100%;
+  }
 }
