Added some UI polish

--- a/src/components/Issue/Issue.scss
+++ b/src/components/Issue/Issue.scss
@@ -2,20 +2,11 @@
   padding: 15px;
   margin-top: 15px;
 
-  &-comment {
-    margin: 10px;
-    border-bottom: 1px solid gray;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    &:last-child {
-      border-bottom: none;
-    }
+  &-num {
+    color: #78909c;
   }
 
-  &-markdown {
-    display: block;
-    margin-left: 10px;
+  &-git {
+    float: right;
   }
 }
