--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,17 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+  background-color: #eceff1;
+
+  &-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  &-logo {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
 }
