--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,9 @@
 .App {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-
   &-title {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-top: 15px;
   }
 
   &-logo {
