--- a/src/components/molecules/Markdown/Markdown.scss
+++ b/src/components/molecules/Markdown/Markdown.scss
@@ -1,4 +1,6 @@
 .Markdown {
+  word-break: break-word;
+
   h1 {
     font-size: 22px;
   }
@@ -12,6 +14,7 @@
     border-radius: 5px;
     padding: 10px;
     overflow: scroll;
+    word-break: break-word;
   }
   code {
     background-color: #eceff1;
@@ -29,17 +32,17 @@
   }
 
   blockquote {
+    font-style: italic;
     padding-left: 10px;
+    position: relative;
 
-    &::before,
-    &::after {
-      display: inline-block;
-      content: '';
-      border-left: 0.3rem solid #b0bec5;
-      // border-top: 0.3rem solid black;
+    &::before {
+      position: absolute;
+      height: 100%;
       width: 4rem;
-      margin: 0 1rem;
-      transform: translateY(-1rem);
+      content: '';
+      border-left: 0.3rem solid #82b1ff;
+      transform: translateX(-1rem);
     }
   }
 }
