--- a/src/components/pages/Issue/Issue.scss
+++ b/src/components/pages/Issue/Issue.scss
@@ -6,7 +6,18 @@
 
   &-title {
     display: flex;
-    flex-basis: row wrap-reverse;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &-gitlink {
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    justify-self: flex-end;
   }
 
   &-loader {
