--- a/src/components/molecules/Markdown/Markdown.scss
+++ b/src/components/molecules/Markdown/Markdown.scss
@@ -1,7 +1,6 @@
 .Markdown {
   word-break: break-word;
-  display: flex;
-  flex-direction: column;
+  hyphens: auto;
 
   h1 {
     font-size: 22px;
@@ -15,13 +14,17 @@
     background-color: #eceff1;
     border-radius: 5px;
     padding: 10px;
-    overflow: scroll;
-    word-break: break-word;
-    word-wrap: break-word;
+    white-space: pre-wrap;
   }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
   code {
     background-color: #eceff1;
-    font-size: 12px;
+    font-size: 10px;
     padding: 5px;
   }
 
