--- a/src/components/organisms/Comment/Comment.scss
+++ b/src/components/organisms/Comment/Comment.scss
@@ -1,20 +1,22 @@
 .Comment {
-  margin: 10px;
+  margin: 5px;
   display: flex;
+
+  &:first-of-type {
+    margin-top: 15px;
+  }
 
   &-main {
     border: 1px solid #cfd8dc;
-    width: 100%;
     border-radius: 5px;
     margin-left: 10px;
-    overflow: scroll;
+    width: 100%;
   }
 
   &-author {
     background-color: #eceff1;
     font-size: 20px;
-    padding: 2px 10px;
-    margin: 0;
+    padding: 3px 10px;
   }
 
   &-says {
