--- a/src/components/molecules/Markdown/Markdown.scss
+++ b/src/components/molecules/Markdown/Markdown.scss
@@ -1,6 +1,7 @@
 .Markdown {
   word-break: break-word;
   hyphens: auto;
+  line-height: 1.25rem;
 
   h1 {
     font-size: 22px;
@@ -24,7 +25,7 @@
 
   code {
     background-color: #eceff1;
-    font-size: 10px;
+    font-size: 13px;
     padding: 5px;
   }
 
