--- a/src/components/pages/Issues/Issues.scss
+++ b/src/components/pages/Issues/Issues.scss
@@ -1,6 +1,6 @@
 .Issues {
   width: 100%;
-  margin-top: 15px;
+  margin-top: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
